add friend page

--- a/templates/friend_gallary.html
+++ b/templates/friend_gallary.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h1 id="hint">呵呵</h1>
+  <h1 id="hint">按按看!</h1>
   <div class="wrapper">
     <div class="box item-1"><img src="{{ url_for('static',filename='image/friend/1.jpg') }}" alt="">
       <div class="overlay ovrl-left ovrl-1"></div>
