--- a/templates/gallary.html
+++ b/templates/gallary.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
-<html >
+<html>
+
 <head>
   <meta charset="UTF-8">
-  <title>哇!太漂亮了吧!</title>  
+  <title>哇!太漂亮了吧!</title>
   <link rel="stylesheet" href="{{ url_for('static',filename='css/gallary.css') }}">
-  
+
 </head>
 
 <body>
   <div class="gallery">
-  <div class="img-w"><img src="{{ url_for('static',filename='image/beautiful153/1.png') }}" alt="" /></div>
-  <div class="img-w"><img src="{{ url_for('static',filename='image/beautiful153/2.png') }}" alt="" /></div>
-  <div class="img-w"><img src="{{ url_for('static',filename='image/beautiful153/3.png') }}" alt="" /></div>
-  <div class="img-w"><img src="{{ url_for('static',filename='image/beautiful153/4.png') }}" alt="" /></div>
-  <div class="img-w"><img src="{{ url_for('static',filename='image/beautiful153/5.png') }}" alt="" /></div>
-  <div class="img-w"><img src="{{ url_for('static',filename='image/beautiful153/6.png') }}" alt="" /></div>
-  <div class="img-w"><img src="{{ url_for('static',filename='image/beautiful153/7.png') }}" alt="" /></div>
-  <div class="img-w"><img src="{{ url_for('static',filename='image/beautiful153/8.png') }}" alt="" /></div>
-  <div class="img-w"><img src="{{ url_for('static',filename='image/beautiful153/9.png') }}" alt="" /></div>
-</div>
+    <div class="img-w"><img src="{{ url_for('static',filename='image/beautiful153/1.png') }}" alt="" /></div>
+    <div class="img-w"><img src="{{ url_for('static',filename='image/beautiful153/2.png') }}" alt="" /></div>
+    <div class="img-w"><img src="{{ url_for('static',filename='image/beautiful153/3.png') }}" alt="" /></div>
+    <div class="img-w"><img src="{{ url_for('static',filename='image/beautiful153/4.png') }}" alt="" /></div>
+    <div class="img-w"><img src="{{ url_for('static',filename='image/beautiful153/5.png') }}" alt="" /></div>
+    <div class="img-w"><img src="{{ url_for('static',filename='image/beautiful153/6.png') }}" alt="" /></div>
+    <div class="img-w"><img src="{{ url_for('static',filename='image/beautiful153/7.png') }}" alt="" /></div>
+    <div class="img-w"><img src="{{ url_for('static',filename='image/beautiful153/8.png') }}" alt="" /></div>
+    <div class="img-w"><img src="{{ url_for('static',filename='image/beautiful153/9.png') }}" alt="" /></div>
+  </div>
+  <div>
+    <h1 style="text-align:center;">這題的key是你覺得我們ㄉ友情可以維持多久ㄋ?</h1>
+  </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
 
-    <script src="{{ url_for('static',filename='js/gallary.js') }}"></script>
+  <script src="{{ url_for('static',filename='js/gallary.js') }}"></script>
 
 </body>
+
 </html>
