--- a/templates/home.html
+++ b/templates/home.html
@@ -27,9 +27,9 @@ body, html {height: 100%}
     <p class="w3-large w3-center">你要幹嘛?</p>
     <p class="w3-large w3-center">1. 在網址列後輸入各種英文單字即可切換到另一個頁面</p>
     <p class="w3-large w3-center">EX: 試試看在網址後面加&nbsp;"/test"</p>
-    <p class="w3-large w3-center">2. 某些頁面需要密碼(那頁會跟你說)才會提供獎勵</p>
+    <p class="w3-large w3-center">2. 除了首頁其他都需要密碼才會給下一個頁面的英文單字(P.S 密碼只有英文和數字)</p>
     <p class="w3-large w3-center">&nbsp;&nbsp;&nbsp;&nbsp;密碼測試方式請在網址後面加上&nbsp;"?key='你的密碼'"</p>
-    <p class="w3-large w3-center">EX: 試試看在某些網址後面加&nbsp;"?key=簡子融" </p>
+    <p class="w3-large w3-center">EX: 試試看在某些網址後面加&nbsp;"?key=87" </p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
     Made by <a href="https://github.com/oscarada87" target="_blank">江俊廷</a>
