--- a/templates/home.html
+++ b/templates/home.html
@@ -26,7 +26,7 @@ body, html {height: 100%}
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <p class="w3-large w3-center">你要幹嘛?</p>
     <p class="w3-large w3-center">1. 在網址列後輸入各種英文單字即可切換到另一個頁面</p>
-    <p class="w3-large w3-center">EX: 試試看在網址後面加&nbsp;"/test"</p>
+    <p class="w3-large w3-center">EX: 試試看在網址後面加&nbsp;"/game"</p>
     <p class="w3-large w3-center">2. 除了首頁其他都需要密碼才會給下一個頁面的英文單字(P.S 密碼只有英文和數字)</p>
     <p class="w3-large w3-center">&nbsp;&nbsp;&nbsp;&nbsp;密碼測試方式請在網址後面加上&nbsp;"?key='你的密碼'"</p>
     <p class="w3-large w3-center">EX: 試試看在某些網址後面加&nbsp;"?key=87" </p>
