--- a/templates/redirect/gallary_redirect1.html
+++ b/templates/redirect/gallary_redirect1.html
@@ -19,7 +19,7 @@
     <script>
         window.setTimeout(function () {
             // Move to a new location or you can do something else
-            window.location.href = "https://flask-practice-crawler.herokuapp.com/EasterEgg";
+            window.location.href = "https://flask-practice-crawler.herokuapp.com/153";
         }, 5000);
     </script>
 </body>
