--- a/templates/friend_gallary.html
+++ b/templates/friend_gallary.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h1 id="hint">按按看!</h1>
+  <h1 id="hint" style="cursor:pointer;">按按看!</h1>
   <div class="wrapper">
     <div class="box item-1"><img src="{{ url_for('static',filename='image/friend/1.jpg') }}" alt="">
       <div class="overlay ovrl-left ovrl-1"></div>
@@ -39,7 +39,7 @@
       <div class="overlay ovrl-right ovrl-6"></div>
       <div class="locker"><i class="arrow fa fa-arrows-h" aria-hidden="true"></i></div>
     </div>
-    <div class="box item-7"><img src="{{ url_for('static',filename='image/friend/7.jpg') }}" alt="">
+    <div class="box item-7"><img src="{{ url_for('static',filename='image/friend/7.png') }}" alt="">
       <div class="overlay ovrl-left ovrl-7"></div>
       <div class="overlay ovrl-right ovrl-7"></div>
       <div class="locker"><i class="arrow fa fa-arrows-h" aria-hidden="true"></i></div>
