--- a/templates/resume.html
+++ b/templates/resume.html
@@ -11,7 +11,7 @@
   <body>
     <div class="left">
       <div class="left-top">
-        <img class="profile-picture" src="{{ url_for('static',filename='image/cat.jpg') }}" alt="profile-picture">
+        <img id="cat" class="profile-picture" src="{{ url_for('static',filename='image/cat.jpg') }}" alt="profile-picture" style="cursor:pointer;">
       </div>
       <div class="left-mid">
         <h3>Profile</h3>
@@ -102,5 +102,6 @@
         <h3>On Going</h3>
       </div>
     </div>
+    <script src="{{ url_for('static',filename='js/resume.js') }}"></script>
   </body>
 </html>
