--- a/templates/resume.html
+++ b/templates/resume.html
@@ -78,7 +78,7 @@
         <div class="right-mid-left">
           <ul>
             <li>剪輯</li>
-            <li>程式</li>
+            <li id="code" style="cursor:pointer;">程式</li>
             <li>創意</li>
             <li>行動力</li>
           </ul>
